@@ -1,5 +1,14 @@
 package com.github.ehdez73.code2req.analyzer;
 
+import com.github.ehdez73.code2req.analyzer.component.ComponentInfo;
+import com.github.ehdez73.code2req.analyzer.component.ComponentVisitor;
+import com.github.ehdez73.code2req.analyzer.endpoint.EndpointInfo;
+import com.github.ehdez73.code2req.analyzer.endpoint.EndpointVisitor;
+import com.github.ehdez73.code2req.analyzer.eventlistener.EventListenerInfo;
+import com.github.ehdez73.code2req.analyzer.eventlistener.EventListenerVisitor;
+import com.github.ehdez73.code2req.analyzer.eventlistener.EventPublisherInfo;
+import com.github.ehdez73.code2req.analyzer.scheduledtask.ScheduledTaskInfo;
+import com.github.ehdez73.code2req.analyzer.scheduledtask.ScheduledTaskVisitor;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 
@@ -13,7 +22,7 @@ import static org.junit.jupiter.api.Assertions.*;
 class JavaAstAnalyzerTest {
 
     private final JavaAstAnalyzer analyzer = new JavaAstAnalyzer(
-        List.of(new ComponentVisitor(), new EndpointVisitor(), new ScheduledTaskVisitor())
+        List.of(new ComponentVisitor(), new EndpointVisitor(), new ScheduledTaskVisitor(), new EventListenerVisitor())
     );
 
     @Test
@@ -36,17 +45,19 @@ class JavaAstAnalyzerTest {
 
         AnalysisResult result = analyzer.analyze(file);
 
-        assertEquals(1, result.components().size());
-        assertEquals("RestController", result.components().getFirst().annotationType());
-        assertEquals("OwnerController", result.components().getFirst().className());
+        assertEquals(1, result.findings(ComponentInfo.class).size());
+        assertEquals("RestController", result.findings(ComponentInfo.class).getFirst().annotationType());
+        assertEquals("OwnerController", result.findings(ComponentInfo.class).getFirst().className());
 
-        assertEquals(2, result.endpoints().size());
-        assertEquals("GET", result.endpoints().get(0).httpMethod());
-        assertEquals("/api/owners/{id}", result.endpoints().get(0).path());
-        assertEquals("POST", result.endpoints().get(1).httpMethod());
-        assertEquals("/api/owners", result.endpoints().get(1).path());
+        assertEquals(2, result.findings(EndpointInfo.class).size());
+        assertEquals("GET", result.findings(EndpointInfo.class).get(0).httpMethod());
+        assertEquals("/api/owners/{id}", result.findings(EndpointInfo.class).get(0).path());
+        assertEquals("POST", result.findings(EndpointInfo.class).get(1).httpMethod());
+        assertEquals("/api/owners", result.findings(EndpointInfo.class).get(1).path());
 
-        assertTrue(result.scheduledTasks().isEmpty());
+        assertTrue(result.findings(ScheduledTaskInfo.class).isEmpty());
+        assertTrue(result.findings(EventListenerInfo.class).isEmpty());
+        assertTrue(result.findings(EventPublisherInfo.class).isEmpty());
     }
 
     @Test
@@ -63,10 +74,12 @@ class JavaAstAnalyzerTest {
 
         AnalysisResult result = analyzer.analyze(file);
 
-        assertEquals(1, result.components().size());
-        assertEquals("Service", result.components().getFirst().annotationType());
-        assertTrue(result.endpoints().isEmpty());
-        assertTrue(result.scheduledTasks().isEmpty());
+        assertEquals(1, result.findings(ComponentInfo.class).size());
+        assertEquals("Service", result.findings(ComponentInfo.class).getFirst().annotationType());
+        assertTrue(result.findings(EndpointInfo.class).isEmpty());
+        assertTrue(result.findings(ScheduledTaskInfo.class).isEmpty());
+        assertTrue(result.findings(EventListenerInfo.class).isEmpty());
+        assertTrue(result.findings(EventPublisherInfo.class).isEmpty());
     }
 
     @Test
@@ -82,12 +95,14 @@ class JavaAstAnalyzerTest {
 
         AnalysisResult result = analyzer.analyze(file);
 
-        assertEquals(1, result.components().size());
-        assertEquals("other", result.components().getFirst().annotationType());
-        assertEquals("PlainModel", result.components().getFirst().className());
-        assertEquals("com.example.model", result.components().getFirst().packageName());
-        assertTrue(result.endpoints().isEmpty());
-        assertTrue(result.scheduledTasks().isEmpty());
+        assertEquals(1, result.findings(ComponentInfo.class).size());
+        assertEquals("other", result.findings(ComponentInfo.class).getFirst().annotationType());
+        assertEquals("PlainModel", result.findings(ComponentInfo.class).getFirst().className());
+        assertEquals("com.example.model", result.findings(ComponentInfo.class).getFirst().packageName());
+        assertTrue(result.findings(EndpointInfo.class).isEmpty());
+        assertTrue(result.findings(ScheduledTaskInfo.class).isEmpty());
+        assertTrue(result.findings(EventListenerInfo.class).isEmpty());
+        assertTrue(result.findings(EventPublisherInfo.class).isEmpty());
     }
 
     @Test
@@ -108,11 +123,11 @@ class JavaAstAnalyzerTest {
 
         AnalysisResult result = analyzer.analyze(file);
 
-        assertEquals(1, result.components().size());
-        assertEquals("Component", result.components().getFirst().annotationType());
-        assertEquals(2, result.scheduledTasks().size());
-        assertEquals("cron", result.scheduledTasks().get(0).type());
-        assertEquals("fixed-rate", result.scheduledTasks().get(1).type());
+        assertEquals(1, result.findings(ComponentInfo.class).size());
+        assertEquals("Component", result.findings(ComponentInfo.class).getFirst().annotationType());
+        assertEquals(2, result.findings(ScheduledTaskInfo.class).size());
+        assertEquals("cron", result.findings(ScheduledTaskInfo.class).get(0).type());
+        assertEquals("fixed-rate", result.findings(ScheduledTaskInfo.class).get(1).type());
     }
 
     @Test
@@ -122,9 +137,11 @@ class JavaAstAnalyzerTest {
 
         AnalysisResult result = analyzer.analyze(file);
 
-        assertTrue(result.components().isEmpty());
-        assertTrue(result.endpoints().isEmpty());
-        assertTrue(result.scheduledTasks().isEmpty());
+        assertTrue(result.findings(ComponentInfo.class).isEmpty());
+        assertTrue(result.findings(EndpointInfo.class).isEmpty());
+        assertTrue(result.findings(ScheduledTaskInfo.class).isEmpty());
+        assertTrue(result.findings(EventListenerInfo.class).isEmpty());
+        assertTrue(result.findings(EventPublisherInfo.class).isEmpty());
         assertNotNull(result.filePath());
     }
 
@@ -132,6 +149,6 @@ class JavaAstAnalyzerTest {
     void nonExistentFileReturnsEmptyResult() {
         Path file = Path.of("/nonexistent/File.java");
         AnalysisResult result = analyzer.analyze(file);
-        assertTrue(result.components().isEmpty());
+        assertTrue(result.findings(ComponentInfo.class).isEmpty());
     }
 }
